Completed Homework1 and Homework2

--- a/openai_api/gpt-4v.ipynb
+++ b/openai_api/gpt-4v.ipynb
@@ -16,6 +16,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1798ff2e-f162-40e7-90d7-68988df5df2b",
+   "metadata": {},
+   "source": [
+    "import os\n",
+    "\n",
+    "os.environ['HTTP_PROXY'] = 'http://127.0.0.1:10810'\n",
+    "os.environ['HTTPS_PROXY'] = 'http://127.0.0.1:10810'\n",
+    "\n",
+    "print(os.environ.get(\"OPENAI_API_KEY\"));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a701c56-0a2a-4dea-b458-234150b84ff2",
    "metadata": {},
    "source": [
@@ -26,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "bf8689b2-94f2-4a35-a332-9ffed0a56aca",
    "metadata": {},
    "outputs": [
@@ -34,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choice(finish_reason='length', index=0, logprobs=None, message=ChatCompletionMessage(content='这幅图呈现了一个宁静美丽的自然景观。图中的主要特点是一条木制的栈道，它穿越在郁郁葱葱的草地上，引向远处看不到的终点。草地上覆盖着茂密的绿色植被，显示出生机勃勃的春夏季节。背景中天空呈现出澄清的蓝色，点缀着几朵轻盈的白云，增添了一种宁静和平和的氛围。\\n\\n整个场景光线充足，阳光和蓝天与绿色植被的对比令人感觉清新愉快。这样的环境可能是理想的徒步旅行地点，提供了亲近自然和放松心情的完美机会。整体上，这幅图传达了大自然的宁静与和谐，是观赏和体验自然美景的一种', role='assistant', function_call=None, tool_calls=None))\n"
+      "Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='这幅图显示了一个自然景观，其中主要特色是一条穿过绿色草地的木板路。图中的草地呈现出鲜明的绿色，周围布满了各种草本植物和灌木，展现出一片生机勃勃的景象。天空中有蓝色的天空和点缀的白云，增添了一种宁静和平和的氛围。这条木板路似乎引导着观者进入更深入的自然探索之旅，引人思考这条路可能通向何处。整体上，这是一幅展示自然之美与人工建设和谐共存的美丽图画。', role='assistant', function_call=None, tool_calls=None))\n"
      ]
     }
    ],
@@ -67,17 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "9bcc9026-7485-428f-8269-ea9ae41405cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'这幅图呈现了一个宁静美丽的自然景观。图中的主要特点是一条木制的栈道，它穿越在郁郁葱葱的草地上，引向远处看不到的终点。草地上覆盖着茂密的绿色植被，显示出生机勃勃的春夏季节。背景中天空呈现出澄清的蓝色，点缀着几朵轻盈的白云，增添了一种宁静和平和的氛围。\\n\\n整个场景光线充足，阳光和蓝天与绿色植被的对比令人感觉清新愉快。这样的环境可能是理想的徒步旅行地点，提供了亲近自然和放松心情的完美机会。整体上，这幅图传达了大自然的宁静与和谐，是观赏和体验自然美景的一种'"
+       "'这幅图显示了一个自然景观，其中主要特色是一条穿过绿色草地的木板路。图中的草地呈现出鲜明的绿色，周围布满了各种草本植物和灌木，展现出一片生机勃勃的景象。天空中有蓝色的天空和点缀的白云，增添了一种宁静和平和的氛围。这条木板路似乎引导着观者进入更深入的自然探索之旅，引人思考这条路可能通向何处。整体上，这是一幅展示自然之美与人工建设和谐共存的美丽图画。'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "c1ca5428-c7e1-4d7e-91f1-d4a05e95ac51",
    "metadata": {},
    "outputs": [],
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "454abb5c-49d3-42e6-867e-f44e25af5e0e",
    "metadata": {},
    "outputs": [
@@ -143,9 +156,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "这幅图是一种幽默风格的搞笑比较。图中展示了两种不同状态的狗。左边是一只被幻想成拥有非常发达肌肉、类似人类健美运动员身体的柴犬，配文“16岁的我，工作后的我”，表达了年轻时充满活力和梦想的状态。右边的柴犬则显得普通、略显憔悴，配有文字“好累好困、好想摸鱼、看到鸡腿就开心，不属于我、我也有小肚腩、肉肉的很可爱”，描绘了工作后可能感到疲惫、减少锻炼而略显发福的现实状态。\n",
+      "这幅图显示的是两个卡通形象，它们将狗的头部与人类的身体进行了合成。左边的形象是一只拥有巨大肌肉的狗，右边则是普通体型的狗坐着。图中还包含了一些文字，对比了这两种不同状态的壮硕程度和其他特征。\n",
       "\n",
-      "这种对比通常用来幽默地表达人们对于理想与现实之间差距的感慨，展示了许多人对于年轻时的憧\n"
+      "左侧的狗被称为“16岁的我”，伴随着文字“我刚适应一片光明，关系网通，人情世故的大神”，描绘了一个在年轻时候无比强大和无忧无虑的形象。\n",
+      "\n",
+      "右边的狗被称为“工作后的我”，其描述为“好累啊，好想摸摸你”，显示了一个工作后感到疲惫和需要慰藉的状态。“我不行你忽悠我，我行也别指望我”，传达了在职场上的压力和对自身能力的认识。\n",
+      "\n",
+      "整体来\n"
      ]
     }
    ],
@@ -181,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "1e83da68-d387-46da-8236-78fc607d1fab",
    "metadata": {},
    "outputs": [],
@@ -248,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "3c0e9063-e8d9-4bc1-ae60-ad0aa5bee32b",
    "metadata": {},
    "outputs": [
@@ -256,14 +273,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "这幅图展示了1980年到2020年间，美国、中国、日本和德国的国内生产总值（GDP）比较。每个国家的GDP以万亿美元为单位标出。从图中可以看出：\n",
+      "这张图展示了从1980年到2020年美国、中国、日本和德国的国内生产总值（GDP）对比。图中，不同的线条代表了各国的GDP走势：\n",
       "\n",
-      "- **美国（蓝线）**：GDP持续增长，从1980年的约3万亿美金增长到2020年的超过20万亿美金。\n",
-      "- **中国（红线）**：自1980年起，GDP增长非常显著，从不到1万亿美金增长至接近15万亿美金。\n",
-      "- **日本（紫线）**：1980年至1995年GDP增长明显，之后增长放缓，并在2005年至2015年间保持相对平稳。\n",
-      "- **德国（绿线）**：GDP增长较为平稳，从1980年的不到1万亿美金增长至2020年的约4万亿美金。\n",
+      "- 蓝色线代表美国，我们可以看到其GDP增长相对平稳且持续增长。\n",
+      "- 红色线代表中国，中国的GDP从1990年代末开始显著增长，并在后期显示出迅猛的增速。\n",
+      "- 紫色线代表日本，日本的GDP在1990年左右达到高峰后，呈现较为平稳或略有下跌的趋势。\n",
+      "- 绿色线代表德国，其GDP增长较为平稳，总体增长幅度较小。\n",
       "\n",
-      "总体而言，图表清晰地表示了这四个经济体在过去四十年间的经济增长情况，其中中国的增长尤其引人注目，显示了其经济的迅速崛起。美国则保持了其全球经济领导地位的增长趋势。日本在90年代后增长放缓，而德国则显示出稳定的增长模式。\n"
+      "此图有效地展示了这四个主要经济体在过去四十年间的经济增长情况。\n"
      ]
     }
    ],
@@ -284,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "4193fa11-5edd-404c-9472-0cb8cc6799fc",
    "metadata": {},
    "outputs": [
@@ -292,17 +309,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "这张图片显示的是一本笔记本上手写的文字，内容主要涉及到自然语言处理（NLP）中的训练技术，如Prompt Tuning和LoRA技术。\n",
+      "这张图片中显示的是一张笔记本的一页，记录了关于深度学习模型优化技术的内容。主要内容包括：\n",
       "\n",
-      "1. **Prompt Tuning（简要模型调整）**： 提到了使用Prompt Tuning来调整一个小型的Transformer模型。此处解释了输入X（由个别输入X1, X2, ..., Xn组成）。每个输入首先通过一个Embedding过程转换，然后通过Token变换。输出Y是通过矩阵W与转换后的输入X'之间的乘法得出。\n",
+      "1. **Prompt Tuning (FMT & Small Model)**: 提到使用了Prompt Tuning技术，适用于小型模型，通过调整input embeddings的方式，即在原始输入序列（\\[X_1, X_2, ..., X_n\\]）前添加一些token来指导模型学习。\n",
       "\n",
-      "2. **Prefix Tuning：** 这部分说明了Prefix Tuning的过程，其中添加了前缀权重W_p到原始权重W_j中，得到新的权重W'用于生成输出Y。\n",
+      "2. **Prefix Tuning**: 是另一种参数调整技术，其中调整的是Transformer模型的一部分权重W，通过分离出可训练的前缀权重 \\(W_p\\) 与不变的权重 \\(W\\) 来优化模型。\n",
       "\n",
-      "3. **LoRA调整技术**： 这部分涉及Linear Re-parameterization（线性重新参数化），通过调整矩阵ΔW（通过两个矩阵A和B的乘积表示）来修改权重W。这是一种节省参数调整的方法，使原有模型的W变为W+ΔW，这里也涉及到了一些矩阵运算和优化策略。\n",
+      "3. **LoRA (Low-Rank Adaptation)**: 记录了一种名为LoRA的微调技术，该方法通过添加低秩矩阵 \\(\\Delta W\\) 来调整原始权重矩阵 \\(W\\)，从而达到提升模型性能与减小训练成本的目的。\n",
       "\n",
-      "其中还提到了两个案例分析的存储需求：“LLAMA”需要65GB，而经过LoRA调整的“QLLoRA”仅需要48GB。\n",
+      "4. 末尾还提到了关于LoRA的一些实验结果，如使用LoRA模型的内存需求量等，如“LAMA-65GB 使用LoRA-78GB” 和 “QLORA使用的内存为48GB”。\n",
       "\n",
-      "这些笔记对于理解NLP中一些先进的模型调整技术十分有用，尤其对于需要在资源受限的环境下部署NLP模型的研究人员或实践者。\n"
+      "这些笔记说明作者在研究和应用深度学习的参数微调技术，特别是在NLP和transformer模型上的应用。\n"
      ]
     }
    ],
@@ -321,24 +338,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "516ee35b-1337-4b22-aea2-ee0adb706098",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "这张图片显示的是一本笔记本上手写的文字，内容主要涉及到自然语言处理（NLP）中的训练技术，如Prompt Tuning和LoRA技术。\n",
+       "这张图片中显示的是一张笔记本的一页，记录了关于深度学习模型优化技术的内容。主要内容包括：\n",
        "\n",
-       "1. **Prompt Tuning（简要模型调整）**： 提到了使用Prompt Tuning来调整一个小型的Transformer模型。此处解释了输入X（由个别输入X1, X2, ..., Xn组成）。每个输入首先通过一个Embedding过程转换，然后通过Token变换。输出Y是通过矩阵W与转换后的输入X'之间的乘法得出。\n",
+       "1. **Prompt Tuning (FMT & Small Model)**: 提到使用了Prompt Tuning技术，适用于小型模型，通过调整input embeddings的方式，即在原始输入序列（\\[X_1, X_2, ..., X_n\\]）前添加一些token来指导模型学习。\n",
        "\n",
-       "2. **Prefix Tuning：** 这部分说明了Prefix Tuning的过程，其中添加了前缀权重W_p到原始权重W_j中，得到新的权重W'用于生成输出Y。\n",
+       "2. **Prefix Tuning**: 是另一种参数调整技术，其中调整的是Transformer模型的一部分权重W，通过分离出可训练的前缀权重 \\(W_p\\) 与不变的权重 \\(W\\) 来优化模型。\n",
        "\n",
-       "3. **LoRA调整技术**： 这部分涉及Linear Re-parameterization（线性重新参数化），通过调整矩阵ΔW（通过两个矩阵A和B的乘积表示）来修改权重W。这是一种节省参数调整的方法，使原有模型的W变为W+ΔW，这里也涉及到了一些矩阵运算和优化策略。\n",
+       "3. **LoRA (Low-Rank Adaptation)**: 记录了一种名为LoRA的微调技术，该方法通过添加低秩矩阵 \\(\\Delta W\\) 来调整原始权重矩阵 \\(W\\)，从而达到提升模型性能与减小训练成本的目的。\n",
        "\n",
-       "其中还提到了两个案例分析的存储需求：“LLAMA”需要65GB，而经过LoRA调整的“QLLoRA”仅需要48GB。\n",
+       "4. 末尾还提到了关于LoRA的一些实验结果，如使用LoRA模型的内存需求量等，如“LAMA-65GB 使用LoRA-78GB” 和 “QLORA使用的内存为48GB”。\n",
        "\n",
-       "这些笔记对于理解NLP中一些先进的模型调整技术十分有用，尤其对于需要在资源受限的环境下部署NLP模型的研究人员或实践者。"
+       "这些笔记说明作者在研究和应用深度学习的参数微调技术，特别是在NLP和transformer模型上的应用。"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -365,31 +382,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "7c046958-aa7a-4066-88fa-4134869d9226",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "这张图片展示的是一本笔记本的两页，内容涉及深度学习、特别是关于自然语言处理（NLP）的各种技术和方法。主要讨论了Transformer模型及其改进方法和训练技术。\n",
+       "这张图片显示的是一本笔记本上的笔记内容，主要围绕自然语言处理（NLP）及其技术特别是变压器（Transformers）模型的训练和优化策略。笔记包含了以下几个部分：\n",
        "\n",
-       "左侧页面的上部标注有“自然语言处理”、“基础”和“评价”，可能是对内容的分类。提到了Transformer模型，并列举了不同的测试标准和指标，如PeFT (“Prompt-based Fine-Tuning”) 和模型性能对比（“Benchmark”）。此外，还提到了不同的方法，如Prompt Tuning和Adapter。具体包括：  \n",
-       "- Adapter: 一个2019年Google的研究\n",
-       "- Prefix: 代表2021年Stanford的工作\n",
-       "- Prompt: 同样是2021年Google的研究\n",
-       "- P-Tuning V1和V2：2021年的两种方法\n",
-       "- Soft prompts：2021年的研究，提示模板基于模板\n",
+       "1. **左侧**\n",
+       "    - **标题“自然语言理解”和“条件文本生成”**：这个部分展示了笔记的主题是关于NLP的两个主要领域，即理解和生成。\n",
+       "    - **PEFT/SOTA, PBFT Methods**：PEFT可能是指针对特定任务的前沿技术指标（State Of The Art），PBFT可能是指基于这些指标的方法。\n",
+       "    - **Prompt Tuning, Adapter, Prefix, P-Tuning V1/V2**等词条涉及到模型优化和调整的多种技术。这些技术主要用来在不大幅度改变整个模型结构的情况下，通过微调来适应特定的任务或改进性能。\n",
+       "    - **LAN、GPT, XLHF, ChatGPT, BLOOM,等**：这些都是大型语言模型，用于多种NLP任务。\n",
        "\n",
-       "右侧页面讨论了多模态指令式微调（multi-modality instruction FT）、Llama (3B)、LoRA、PETC（2022年的新技术）等。还有部分文字描述了如何使用prefix-tuning和Adapter方法来细化在大型语言模型（LLMs）中的处理。\n",
+       "2. **右侧**\n",
+       "    - **多模态指令微调：Llama (3B)** 和 **LoRA, GLORa, AdapterA**等技术名词，这部分笔记看起来是关于多种技术的集成和比较。\n",
+       "    - **Refine oh in LLMs** 和其下的技术细节描述了LLM（大型语言模型）如何进行精细化处理的技术。\n",
+       "    - **MAM Adapters** 和 **Scaled parallel adapter** 提到了一种可能的新方法或模型架构调整。\n",
        "\n",
-       "页面提到了几种语言模型，如：\n",
-       "- Llama \n",
-       "- BLOOM\n",
-       "- ChatGLM \n",
-       "- Alpaca\n",
-       "\n",
-       "这些内容表明这本笔记本的主人正在研究或学习NLP领域的最新技术和方法，特别是如何通过各种微调技术提升已有的大型语言模型的性能。"
+       "笔记详细地记录了多种最新的NLP模型优化技术和方法，旨在探索和比较它们在不同方面的应用和效果。这些笔记可以帮助研究者保持对前沿技术的最新理解，并应用于实际的机器学习项目和研究之中。"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -405,32 +418,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "156a0f17-cca8-4f01-9ce5-53384b5ffda4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3bd772f-9492-4f6c-b05a-666b772ca3c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8afdeacb-aac1-4692-be2b-fb7957ba5e8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "79a8d459-d98e-4215-9fbf-38ad37080475",
+   "id": "37a25254-2597-4ec9-a84f-457b69a7eec6",
    "metadata": {},
    "source": [
     "## Homework: \n",
@@ -438,8 +427,33 @@
     "\n",
     "### #1\n",
     "\n",
-    "使用 GPT-4V 识别带有手写体文字的本地图像文件，分享结果。\n",
-    "\n",
+    "使用 GPT-4V 识别带有手写体文字的本地图像文件，分享结果。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e3bd772f-9492-4f6c-b05a-666b772ca3c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "这段文字的中心思想是关于知识和智慧的重要性，以及它们对于解决问题和应对挑战的帮助。全文可以理解为强调了通过阅读和学习，我们可以获得无形的力量，有助于提高个人修养，更好地理解和处理世界上的复杂问题。此外，还传达了知识因被学习而生效，被应用而显其价值的观点。\n"
+     ]
+    }
+   ],
+   "source": [
+    "content = query_base64_image_description(image_path=\"./images/handwriting_2.jpg\",prompt=\"请给我这张图片上的句子想表达什么中心思想。\")\n",
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1365f438-4ef7-47b9-a80f-a32f2dc21b8b",
+   "metadata": {},
+   "source": [
     "### #2\n",
     "\n",
     "整合 `query_base64_image_description` 函数和 Markdown 格式渲染方法，使得输出结果更易阅读。"
@@ -447,8 +461,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "a1e9670b-88e8-4c3b-9e9e-baf025a428f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "这句话的中心思想是在表达珍惜时光、努力生活的重要性。文字翻译为“珍惜当下这个快乐满足的时光，不要让岁月荒废，让自己被时间推着走。”这表达了一个对时间的积极态度，鼓励人们要珍惜眼前的幸福时光，不要被消极的思想和懈怠的行为所影响，要主动地利用和珍视时间。"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "content = query_base64_image_description(image_path=\"./images/handwriting_2.jpg\",prompt=\"请给我这张图片上的句子想表达什么中心思想。\")\n",
+    "display(Markdown(content))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "0909bf27-9c4a-498c-9fae-0f442062b9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e40876d5-850e-4fa2-9ec8-71032a9543e4",
    "metadata": {},
    "outputs": [],
    "source": []
