Completed Homework 3(Day 03)

--- a/langchain/sales_chatbot/sales.ipynb
+++ b/langchain/sales_chatbot/sales.ipynb
@@ -84,23 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "efcee928-b9f4-4e4a-b9fb-f6cbee21b642",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"real_estate_sales_data.txt\") as f:\n",
+    "with open(\"real_estate_sales_data.txt\",encoding='utf-8') as f:\n",
     "    real_estate_sales = f.read()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a9119556-d2e3-4edf-be16-15837da156f1",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "### 使用 CharacterTextSplitter 来进行文本分割\n",
     "\n",
@@ -123,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dbe535b8-2bd8-4c31-91d7-eba8aa61b3ef",
    "metadata": {},
    "outputs": [],
@@ -133,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a4f30d9b-9fc6-4860-a497-0aa8220b9284",
    "metadata": {},
    "outputs": [],
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "530f3172-17a5-4924-ad17-284fbca422ae",
    "metadata": {},
    "outputs": [],
@@ -159,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3956ec36-706e-4f43-88fc-d704f2984290",
    "metadata": {},
    "outputs": [
@@ -169,7 +165,7 @@
        "Document(page_content='[客户问题] 这个小区交通便利吗？\\n[销售回答] 当然了，这个小区距离地铁站只有几分钟的步行距离，而且附近有多条公交线路，非常方便。')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
