--- a/langchain/jupyter/chains/router_chain.ipynb
+++ b/langchain/jupyter/chains/router_chain.ipynb
@@ -19,6 +19,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1730d6c3-10c4-4359-87b8-7f0d592927ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk-proj-3qMKwHdieh8eXSmtEajbT3BlbkFJGMcnkLA9dUVxRf4g0seS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ['HTTP_PROXY'] = 'http://127.0.0.1:10810'\n",
+    "os.environ['HTTPS_PROXY'] = 'http://127.0.0.1:10810'\n",
+    "\n",
+    "print(os.environ.get(\"OPENAI_API_KEY\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "24efe291-8745-4e78-bdb4-648e60d7bac8",
    "metadata": {},
    "outputs": [
@@ -26,36 +48,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: langchain in c:\\users\\lenovo\\appdata\\roaming\\python\\python310\\site-packages (0.2.7)\n",
-      "Requirement already satisfied: PyYAML>=5.3 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (6.0.1)\n",
-      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (2.0.31)\n",
-      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (3.9.5)\n",
-      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (4.0.3)\n",
-      "Requirement already satisfied: langchain-core<0.3.0,>=0.2.12 in c:\\users\\lenovo\\appdata\\roaming\\python\\python310\\site-packages (from langchain) (0.2.13)\n",
-      "Requirement already satisfied: langchain-text-splitters<0.3.0,>=0.2.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (0.2.0)\n",
-      "Requirement already satisfied: langsmith<0.2.0,>=0.1.17 in c:\\users\\lenovo\\appdata\\roaming\\python\\python310\\site-packages (from langchain) (0.1.85)\n",
-      "Requirement already satisfied: numpy<2,>=1 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (1.26.4)\n",
-      "Requirement already satisfied: pydantic<3,>=1 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (2.5.3)\n",
-      "Requirement already satisfied: requests<3,>=2 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (2.31.0)\n",
-      "Requirement already satisfied: tenacity!=8.4.0,<9.0.0,>=8.1.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain) (8.4.2)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.2.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.5)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
-      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.12->langchain) (1.33)\n",
-      "Requirement already satisfied: packaging<25,>=23.2 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.12->langchain) (23.2)\n",
-      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from langsmith<0.2.0,>=0.1.17->langchain) (3.10.5)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from pydantic<3,>=1->langchain) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.14.6 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from pydantic<3,>=1->langchain) (2.14.6)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from pydantic<3,>=1->langchain) (4.12.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from requests<3,>=2->langchain) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from requests<3,>=2->langchain) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from requests<3,>=2->langchain) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from requests<3,>=2->langchain) (2024.2.2)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.0.3)\n",
-      "Requirement already satisfied: jsonpointer>=1.9 in c:\\programdata\\anaconda3\\envs\\langchain\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.3.0,>=0.2.12->langchain) (3.0.0)\n"
+      "Requirement already satisfied: langchain in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (0.2.0)\n",
+      "Collecting langchain\n",
+      "  Downloading langchain-0.2.8-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (6.0.1)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (2.0.31)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (3.9.5)\n",
+      "Requirement already satisfied: async-timeout<5.0.0,>=4.0.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (4.0.3)\n",
+      "Requirement already satisfied: langchain-core<0.3.0,>=0.2.19 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (0.2.20)\n",
+      "Requirement already satisfied: langchain-text-splitters<0.3.0,>=0.2.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (0.2.0)\n",
+      "Requirement already satisfied: langsmith<0.2.0,>=0.1.17 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (0.1.88)\n",
+      "Requirement already satisfied: numpy<2,>=1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (1.26.4)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (2.8.2)\n",
+      "Requirement already satisfied: requests<3,>=2 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (2.31.0)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<9.0.0,>=8.1.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain) (8.4.2)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.3.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (23.2.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.4.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (6.0.5)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain) (1.9.4)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.19->langchain) (1.33)\n",
+      "Requirement already satisfied: packaging<25,>=23.2 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.19->langchain) (23.2)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from langsmith<0.2.0,>=0.1.17->langchain) (3.10.6)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from pydantic<3,>=1->langchain) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from pydantic<3,>=1->langchain) (2.20.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from pydantic<3,>=1->langchain) (4.12.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from requests<3,>=2->langchain) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from requests<3,>=2->langchain) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from requests<3,>=2->langchain) (1.26.18)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from requests<3,>=2->langchain) (2024.2.2)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from SQLAlchemy<3,>=1.4->langchain) (3.0.3)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in d:\\software\\miniconda\\miniconda24.5.0\\envs\\itatraining\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.3.0,>=0.2.19->langchain) (3.0.0)\n",
+      "Downloading langchain-0.2.8-py3-none-any.whl (987 kB)\n",
+      "   ---------------------------------------- 0.0/987.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 10.2/987.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 10.2/987.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 10.2/987.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 10.2/987.6 kB ? eta -:--:--\n",
+      "   - ------------------------------------- 41.0/987.6 kB 164.3 kB/s eta 0:00:06\n",
+      "   - ------------------------------------- 41.0/987.6 kB 164.3 kB/s eta 0:00:06\n",
+      "   - ------------------------------------- 41.0/987.6 kB 164.3 kB/s eta 0:00:06\n",
+      "   - ------------------------------------- 41.0/987.6 kB 164.3 kB/s eta 0:00:06\n",
+      "   ---- --------------------------------- 122.9/987.6 kB 288.1 kB/s eta 0:00:04\n",
+      "   ---- --------------------------------- 122.9/987.6 kB 288.1 kB/s eta 0:00:04\n",
+      "   ---- --------------------------------- 122.9/987.6 kB 288.1 kB/s eta 0:00:04\n",
+      "   ---- --------------------------------- 122.9/987.6 kB 288.1 kB/s eta 0:00:04\n",
+      "   ---------- --------------------------- 276.5/987.6 kB 448.2 kB/s eta 0:00:02\n",
+      "   ---------- --------------------------- 276.5/987.6 kB 448.2 kB/s eta 0:00:02\n",
+      "   ---------- --------------------------- 276.5/987.6 kB 448.2 kB/s eta 0:00:02\n",
+      "   ---------- --------------------------- 276.5/987.6 kB 448.2 kB/s eta 0:00:02\n",
+      "   ---------- --------------------------- 276.5/987.6 kB 448.2 kB/s eta 0:00:02\n",
+      "   -------------------- ----------------- 532.5/987.6 kB 630.7 kB/s eta 0:00:01\n",
+      "   -------------------- ----------------- 532.5/987.6 kB 630.7 kB/s eta 0:00:01\n",
+      "   -------------------- ----------------- 532.5/987.6 kB 630.7 kB/s eta 0:00:01\n",
+      "   -------------------- ----------------- 532.5/987.6 kB 630.7 kB/s eta 0:00:01\n",
+      "   -------------------------------------  983.0/987.6 kB 972.8 kB/s eta 0:00:01\n",
+      "   -------------------------------------- 987.6/987.6 kB 948.0 kB/s eta 0:00:00\n",
+      "Installing collected packages: langchain\n",
+      "  Attempting uninstall: langchain\n",
+      "    Found existing installation: langchain 0.2.0\n",
+      "    Uninstalling langchain-0.2.0:\n",
+      "      Successfully uninstalled langchain-0.2.0\n",
+      "Successfully installed langchain-0.2.8\n"
      ]
     }
    ],
@@ -94,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "aaf8c391-9225-4e66-ad4d-d689b53a0379",
    "metadata": {},
    "outputs": [],
@@ -108,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "33b5061c-391e-4762-91c7-73b57f4ab501",
    "metadata": {},
    "outputs": [],
@@ -131,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5ef1db6e-3da4-4f9b-9707-0f30aa293dd7",
    "metadata": {},
    "outputs": [],
@@ -152,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3983cafe-c2d5-4951-b779-88d844594777",
    "metadata": {},
    "outputs": [],
@@ -162,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "db8be9f0-1ac2-4ded-8950-6403cfa40004",
    "metadata": {},
    "outputs": [
@@ -170,9 +224,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Roaming\\Python\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "D:\\software\\Miniconda\\Miniconda24.5.0\\envs\\ITATraining\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
       "  warn_deprecated(\n",
-      "C:\\Users\\lenovo\\AppData\\Roaming\\Python\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
+      "D:\\software\\Miniconda\\Miniconda24.5.0\\envs\\ITATraining\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
       "  warn_deprecated(\n"
      ]
     }
@@ -198,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ae77b13a-2077-4e80-83f9-a2b1d8398461",
    "metadata": {},
    "outputs": [
@@ -208,7 +262,7 @@
        "langchain.chains.conversation.base.ConversationChain"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1c196e6c-e767-4d4f-8327-50ead641bc3a",
    "metadata": {},
    "outputs": [],
